--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
 <body style="margin:0px;">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script src="three.r119.min.js"></script>
-  <script src="vanta.net.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.21/dist/vanta.net.min.js"></script>
   <script>
   VANTA.NET({
     el: "body",
     mouseControls: true,
-    touchControls: true,
-    gyroControls: false,
-    minHeight: 200.00,
-    minWidth: 200.00,
-    scale: 1.00,
-    scaleMobile: 1.00,
-    color: 0x45d4ca,
-    points: 13.00,
-    spacing: 19.00
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0x36dcdc,
+  points: 20.00,
+  maxDistance: 26.00,
+  spacing: 20.00
   })
   </script>
 </body>
